# rusty-binder

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  Rusty Binder Data.drawio  Rusty Binder Data.html
migrations/2020-06-04-003635_initialize/: up.sql
src/: domain.rs  main.rs  schema.rs
src/actor/: db.rs
