[package]
name = "rusty-binder"
version = "0.1.0"
authors = ["Greg Gaskill <aboron@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0-alpha.3"
actix-web = "3.0.0-alpha.3"
actix-rt = "1.1.1"
chrono = {version = "0.4.11", features = ["serde"] }
diesel = {version = "1.4.4", features = ["sqlite", "postgres", "uuid", "r2d2", "chrono"]}
dotenv = "0.15.0"
failure = "0.1.8"
futures = "0.3.5"
r2d2 = "0.8.8"
serde_derive = "1.0.111"
serde_json = "1.0.53"
serde = "1.0.111"
uuid = {version = "0.8.1", features = ["serde", "v4"]}
trust-dns-client = "0.19.5"
